@@ -1,5 +1,17 @@
 2006-10-09 Joerg Wunsch <j@uriah.heep.sax.de>
 
+	Submitted by John Voltz: add AVR053 oscillator calibration.
+	* main.c: Add the -O option.
+	* pgm.c: Add the hook for the perform_osccal() method.
+	* pgm.h: (Ditto.)
+	* stk500v2.c: Implement perform_osccal().
+	* avrdude.1: Document the -O option.
+	* doc/avrdude.texi: (Ditto.)
+	Partially closes bug #17487: AVR RC oscillator calibration
+	routine not supported (feature request)
+
+2006-10-09 Joerg Wunsch <j@uriah.heep.sax.de>
+
 	Submitted by freckle@sf.net:
 	* stk500.c (stk500_paged_write): Send the command and the data
 	payload within a single write().
